# get_data_from_api

./: .dockerignore  .gitignore  Dockerfile  README.md  db.json  methods_and_mastery.db  methods_and_mastery.db-journal  pyproject.toml  request_results.db
src/: main.py
test/src/: test_main.py
