[tool.poetry]
name = "get-data-from-api"
version = "0.1.0"
description = "Get results from mock API and upsert them into a SQLite database"
authors = ["Jacob Martin <jacobmartin221@gmail.com>"]
readme = "README.md"
packages = [
  { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
